--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,54 @@
-# Reference https://github.com/github/gitignore/blob/master/Qt.gitignore
-
-
 # C++ objects and libs
-.slo
-.lo
-.o
-.a
-.la
-.lai
-.so
-.so.
-.dll
-.dylib
+*.slo
+*.lo
+*.o
+*.a
+*.la
+*.lai
+*.so
+*.so.*
+*.dll
+*.dylib
 
 # Qt-es
-object_script..Release
-object_script..Debug
-_plugin_import.cpp
-.qmake.cache
-.qmake.stash
-.pro.user
-.pro.user.
-.qbs.user
-.qbs.user.
-.moc
-moc_.cpp
-moc_.h
-qrc_.cpp
-ui_.h
-.qmlc
-.jsc
-Makefile
-build-
-.qm
-.prl
+object_script.*.Release
+object_script.*.Debug
+*_plugin_import.cpp
+/.qmake.cache
+/.qmake.stash
+*.pro.user
+*.pro.user.*
+*.qbs.user
+*.qbs.user.*
+*.moc
+moc_*.cpp
+moc_*.h
+qrc_*.cpp
+ui_*.h
+*.qmlc
+*.jsc
+Makefile*
+*build-*
+*.qm
+*.prl
 
 # Qt unit tests
-target_wrapper.
+target_wrapper.*
 
 # QtCreator
-.autosave
+*.autosave
 
 # QtCreator Qml
-.qmlproject.user
-.qmlproject.user.
+*.qmlproject.user
+*.qmlproject.user.*
 
 # QtCreator CMake
-CMakeLists.txt.user
+CMakeLists.txt.user*
 
-# QtCreator 4.8 compilation database 
+# QtCreator 4.8< compilation database 
 compile_commands.json
 
 # QtCreator local machine specific files for imported projects
-creator.user
+*creator.user*
 
-_qmlcache.qrc
+*_qmlcache.qrc
